# CRAIC

./: .gitignore  .gitmodules  README.md  grep_ekf.sh  run.sh
src/camera/ring/: CMakeLists.txt  package.xml
src/camera/ring/launch/: ring_detector.launch
src/camera/ring/n150_benchmark_package/deployment_n150/: RUN_ON_N150.md
src/camera/ring/n150_benchmark_package/deployment_n150/benchmark_scripts/: run_openvino_image_benchmark.py
src/camera/ring/n150_benchmark_package/deployment_n150/openvino_model/best_openvino_model/: best.xml  metadata.yaml
src/camera/ring/n150_benchmark_package/deployment_n150/readonly_ros_test_materials/: README_readonly_ros_odin_test.md
src/camera/ring/scripts/: ring_detector_node.py
src/camera/special_target_detection_n150/: CMakeLists.txt  package.xml
src/camera/special_target_detection_n150/launch/: special_target_detector.launch
src/camera/special_target_detection_n150/scripts/: special_target_detector_node.py
src/camera/special_target_detection_n150/special_target_detection_n150/: README_N150_UBUNTU20.md  requirements_ubuntu20.txt
src/camera/special_target_detection_n150/special_target_detection_n150/configs/: train_special_target.yaml
src/camera/special_target_detection_n150/special_target_detection_n150/scripts/: common.py  infer.py
src/camera/uav-4-class/: README.md  config.json  run_onnx.py
src/camera/uav-4-class/ros/uav_4class_infer/: CMakeLists.txt  package.xml
src/camera/uav-4-class/ros/uav_4class_infer/launch/: uav_4class.launch
src/camera/uav-4-class/ros/uav_4class_infer/scripts/: uav_4class_node.py
src/camera/uav_deployment/: DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  QUICK_START.md  README.md  SUMMARY.md  organize_models.py  requirements.txt  test_local.py
src/camera/uav_deployment/two_stage_infer/: CMakeLists.txt  package.xml
src/camera/uav_deployment/two_stage_infer/launch/: camera.launch  two_stage.launch
src/camera/uav_deployment/two_stage_infer/scripts/: infer_node.py  windows_udp_cam.py
src/craic_odin_px4_adapter/: CMakeLists.txt  package.xml
src/craic_odin_px4_adapter/docs/: super_real_flight_handoff.md
src/craic_odin_px4_adapter/launch/: craic2026_hold2s_mission_runner copy.launch  craic2026_hold2s_mission_runner.launch  odin_to_mavros_pose.launch  orbit_obstacle_goals.launch  simple_waypoint_test.launch  super_odin_px4.launch  super_odin_px4_preview.launch
src/craic_odin_px4_adapter/scripts/: auto_takeoff_forward_land.py  craic2026_hold2s_mission_runner.py  lock_height_position_cmd.py  odin_to_mavros_pose.py  odin_to_px4ctrl_odom.py  orbit_obstacle_goals.py  record_super_test_bag.sh  rviz_goal_to_super.py  simple_waypoint_test.py  start_super_real_flight.sh  super_preview_visualizer.py
src/electromagnet_control/: CMakeLists.txt  README.md  package.xml
src/electromagnet_control/include/electromagnet_control/: electromagnet_controller.h
src/electromagnet_control/launch/: electromagnet_service.launch  electromagnet_test.launch
src/electromagnet_control/src/: electromagnet_controller.cpp  electromagnet_service_node.cpp  electromagnet_test_node.cpp
src/px4ctrl/: CMakeLists.txt  README.md
src/px4ctrl/src/: input.cpp  (+3 more)
src/super/: .gitmodules  README.md
src/super/mission_planner/: CMakeLists.txt  package.xml
src/super/mission_planner/Apps/: path_mission.cpp  star_mission.cpp  tracking_mission.cpp  waypoint_mission.cpp
src/super/mission_planner/config/: waypoint.yaml
src/super/mission_planner/data/: bridge.txt  corner.txt  fule.txt  libai.txt  thin_wire.txt  thin_wire_down.txt  thin_wire_up.txt
src/super/mission_planner/include/path_mission/: config.hpp  path_mission.hpp
src/super/mission_planner/include/tracking_mission/: config.hpp  tracking_planner.hpp
src/super/mission_planner/include/waypoint_mission/: config.hpp  waypoint_planner.hpp
src/super/mission_planner/launch/: mission.launch
src/super/super_planner/: CMakeLists.txt  package.xml
src/super/super_planner/Apps/: bench_node.cpp  draw_figure.cpp  fsm_node.cpp  gen_random_sfc.cpp  offline_traj_opt.cpp  plan_from_odom_test.cpp  sfc_gen.hpp
src/super/super_planner/config/: exp.yaml  exp_1.yaml  exp_2.yaml  exp_3.yaml  exp_4.yaml  exp_5.yaml  exp_advanced_params.yaml
src/super/super_planner/config/benchmark/: bench_16.yaml  bench_2.yaml  bench_24.yaml  bench_32.yaml  bench_4.yaml  bench_8.yaml
src/super/super_planner/config/benchmark_ref/: bench_16.yaml  bench_2.yaml  bench_32.yaml  bench_4.yaml  bench_8.yaml
src/super/super_planner/config/used/: bridge.yaml  corner.yaml  fule.yaml  libai.yaml  libai_dense.yaml  libai_gazebo.yaml  odom_plan.yaml  swarm.yaml  thin_wire.yaml
src/super/super_planner/launch/: bench.launch  exploration.launch  fule.launch  real_viz.launch
src/super/super_planner/log/: check_log.md  plot_hit_num.py  plot_time.py
src/super/super_planner/rviz/: real_svc.rviz
src/super/super_planner/submodule/planner_fsm/: CMakeLists.txt
src/super/super_planner/submodule/planner_fsm/include/planner_fsm/: config.h  fsm.h
src/super/super_planner/submodule/planner_fsm/src/: config.cpp  fsm.cpp
src/super/super_planner/submodule/super_core/: CMakeLists.txt
src/super/super_planner/submodule/super_core/include/super_core/: ciri.h  config.h  control_cmd_gene.h  corridor_generator.h  fov_checker.h  gen_sfc_baselines.h  super_planner.h  swarm_bridge.h  visualizer.h
src/super/super_planner/submodule/super_core/src/: ciri.cpp  config.cpp  control_cmd_gene.cpp  corridor_generator.cpp  super_planner.cpp  swarm_bridge.cpp  visualizer.cpp
src/super/super_planner/submodule/traj_opt/: CMakeLists.txt
src/super/super_planner/submodule/traj_opt/include/traj_opt/: backup_traj_optimizer_s4.h  config.h  exp_traj_optimizer_s4.h  minco.h  yaw_traj_opt.h
src/super/super_planner/submodule/traj_opt/src/: backup_traj_optimizer_s4.cpp  config.cpp  exp_traj_optimizer_s4.cpp  minco.cpp  yaw_traj_opt.cpp
src/uav_environment_ros/: LICENSE  README.md
src/uav_environment_ros/quadrotor_msgs/: CMakeLists.txt  package.xml
src/uav_environment_ros/quadrotor_msgs/msg/: PositionCommand.msg  Px4ctrlDebug.msg
(+41 files in other folders)
