<?xml version="1.0"?>
<package format="2">
  <name>electromagnet_control</name>
  <version>0.0.0</version>
  <description>Shared electromagnet controller for MAVROS DO_SET_ACTUATOR based release logic</description>

  <maintainer email="miku@todo.todo">miku</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>mavros_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>mavros_msgs</exec_depend>

  <export/>
</package>
