<?xml version="1.0"?>
<package format="2">
  <name>ring_detector</name>
  <version>0.0.1</version>
  <description>Read-only ring detector for mission5 camera testing.</description>

  <maintainer email="n150@todo.todo">n150</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
</package>
