<?xml version="1.0"?>
<package format="2">
  <name>special_target_detection_n150</name>
  <version>0.1.0</version>
  <description>ROS1 wrapper for the N150 special target YOLO detector.</description>

  <maintainer email="n150@todo.todo">n150</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
</package>
