<?xml version="1.0"?>
<package format="2">
  <name>uav_4class_infer</name>
  <version>0.1.0</version>
  <description>UAV 4-class target inference node using ONNX detector, rectification, and classifier.</description>
  <maintainer email="uav@example.com">uav</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
</package>
